# aioca

./: .copier-answers.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Pipfile  README.md  README.rst  catalog-info.yaml  pyproject.toml  setup.cfg  setup.py  switcher.json
.github/: CONTRIBUTING.md  CONTRIBUTING.rst
0.1/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
0.1.1/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html
0.1.2/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html
0.2/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html
0.2.1/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html
0.2.2/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
0.2.3/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html
0.2.4/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html
1.0/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
1.1/: .buildinfo  contributing.html  objects.inv  search.html  searchindex.js
1.2/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
1.3/: .buildinfo  index.html  py-modindex.html
1.4/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.5/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.5.1/: .buildinfo  contents.html  index.html  search.html  searchindex.js
1.6/: .buildinfo  api.html  contents.html  contributing.html  index.html  objects.inv  search.html  searchindex.js
1.7/: .buildinfo  api.html  search.html
1.8/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
1.8.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
2.0a1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
2.0a2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
2.0a3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
2.0a4/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
aioca/: __init__.py  _aioca.py  _cadef.py  _carepeater.py  _catools.py  _dbr.py  _load_ca.py  _version_git.py  aioca.py  cache.py  types.py
docs/: api.rst  conf.py  contents.rst  index.rst  requirements.txt
main/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
master/: .buildinfo  api.html  contents.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
test/: soft_records.db  test_aioca.py
tests/: import_in_different_thread.py  (+3 more)
(+278 files in other folders)
