[metadata]
name = aioca
# description = Module  # a short description of the module
author = 'Tom Cobb',
author_email = 'tom.cobb@diamond.ac.uk',
license = Apache License 2.0
long_description = file: README.rst

[options]
# Locate packages automatically
packages = find:
install_requires =
     numpy
     epicscorelibs
     
# If you want to include data files in packages,
# set following to True and include a MANIFEST.in file.
include_package_data = False

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
