[metadata]
name = aioca
description = Asynchronous Channel Access client for asyncio and Python using libca via ctypes
url = https://github.com/dls-controls/aioca
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
# Locate packages automatically
packages = find:
install_requires =
     numpy
     epicscorelibs >= 7.0.3.99.4.0
     typing_extensions

# If you want to include data files in packages,
# set following to True and include a MANIFEST.in file.
include_package_data = False

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
skip=setup.py,conf.py

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203, # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --flake8 --black --mypy
