[metadata]
name = aioca
description = Asynchronous Channel Access client for asyncio and Python using libca via ctypes
url = https://github.com/dls-controls/aioca
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
# Locate packages automatically
packages = find:
install_requires =
     numpy
     epicscorelibs >= 7.0.3.99.4.0
     typing_extensions

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203, # See https://github.com/PyCQA/pycodestyle/issues/373
    F811, # support typing.overload decorator

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
# Turn off unraisable exceptions as we want to check for them in test_closing_event_loop()
addopts = --tb=native -vv --flake8 --black --mypy -p no:unraisableexception

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
